<resources>
    <string name="app_name">ONE</string>
    <string name="title_home">首页</string>
    <string name="title_article">文章</string>
    <string name="title_question">问题</string>
    <string name="one_text">永远相信美好的事情即将发生。 by 小米</string>
    <string name="one_date">1900 / 01 / 01</string>
    <string name="one_vol">VOL.0</string>
    <string name="picture_author">摄影 | 李继鹏</string>
    <string name="date_day">01</string>
    <string name="date_month_and_year">Jan.1900</string>
    <string name="author_text">作者\n━━━━</string>
    <string name="questionTitle">李继鹏！</string>
    <string name="questionContent">整天写这些没用的app有意思吗！</string>
    <string name="answerer">李继鹏</string>
    <string name="asker">想你了</string>
    <string name="questionEditorInfo">活着就是要不断去体验的啊</string>
    <string name="guideWord">只为吻你才低头</string>
    <string name="articleTitle">故事</string>
    <string name="articleSubTitle">━━━━</string>
    <string name="articleAuthorTop">文/李继鹏</string>
    <string name="articleAuthorInfo">远方是他人的近处</string>
    <string name="articleCopyright">大一，写在下晚自习回宿舍的路上</string>
    <string name="articleContent"><html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
  <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="file:///android_asset/one_local.css"/>
 </head>
 <body class="one-webview placeholder-one-night-mode">
  <p>（一）</p>
  <p>从小我不擅长游戏，小孩子间风行的种种玩法，但凡需要一点技巧，或要动些脑筋的，绝大多数都玩得一般。有时连一般都不算，直差劲。这大约是一种与生俱来的笨拙，与之相反，有些天生灵敏的小孩子，无论什么游戏都能玩得很好。每和他们一起去玩，我不免心里羡慕，爱他们如鱼得水的熟练和灵巧，然而也还是喜欢玩这件事，也喜欢看他们玩了。</p>
  <p>平常我们最经常玩的地方，是村子中间姨奶奶家和小娥子奶奶家门口的场基。因为是两家共有，比一般场基大出一半，可以追可以跑，离各家的屋又都不远，大人喊能够听见，是很理想的玩的场所。场基西面一个小小的水塘，水塘边长枫杨，年年春天，树下青苔密布的时候，我们喜欢在树下的围墙边找一种新发芽的小苗，小小两片裂成几须的叶子，并列如张开的羽翅。我们很爱这小苗的样子，常常把它拔出来玩，嫩红的根茎可爱。那时候我们总不知道这是什么树的苗，想等它长大了再来看一看，然而等到春天过去，小苗长出两片红中透绿的卵圆形真叶，失去了幼小时可爱的样子，我们就对它失去了兴趣，再也想不起来看了。离乡后很多年不曾看见家里的春天，小苗也许多年不曾再见过，也曾想过是不是就是枫杨的幼苗呢，也不确定是不是。直到现在，也只好在记忆里用力比方着，却说不清楚了。场基上则没有任何植物，连一根草都没有，年年走人和晒稻的地方，是不会长草的。</p>
  <p>从春到秋的午后和黄昏，我们常常在这中间略高、四角略低的空地上玩。小孩子间最通行的游戏，首先还是跳橡皮筋、踢毽子。橡皮筋我们称为蚂蟥筋，因其所用的松紧绳和田里的蚂蟥一样，都有可伸缩的特点。这名字很有些吓人，那时我们却不觉得，只是很平常地叫着，大概因为日常上学的路上，春夏间才栽下秧的新田里，细细的蚂蟥在黄绿田水里一拱一拱地游着，也是很常见的情景。虽然蚂蟥吸血，的确让人厌恶而害怕，但小孩子又不常下田栽秧。我们中间只是因其名称的相似而生出一种谣言，即是相传蚂蟥筋“能吸血”。逢到家里给做了新裤子，裤腰里缝的松紧绳太紧，把腰上勒出一圈红印子，我们难免要慌张，感到蚂蟥筋果然在吸血了。然而蚂蟥筋我们又实在很爱，做衣裳时，看裁缝拿着黄色的点着点点银星的竹尺，一尺两尺那么在一根长长的松紧绳上量着，心里羡慕极了。我们偶尔在小店里买松紧绳做蚂蟥筋，绳子五分钱一尺，对小孩子是很昂贵的价格，只能买短短两三尺，回去接在已经跳得破破烂烂的旧蚂蟥筋上。因此，一条长长的蚂蟥筋是我们轻易不能拥有的一笔大财产，我不记得我和妹妹曾有过一条完整的蚂蟥筋，即或有，也是很短的，不好跳。村子里长一点的蚂蟥筋，都是几个小孩子一起凑出来的。用剪刀从家里不要的旧裤子上拆出来的一截松紧蝇，小店里买来的三尺四尺，都拿出来疙疙瘩瘩系到一起，系成一个圈。这一条蚂蟥筋便成为几个人共同的财产，要玩的时候一起玩。有时也带别人玩，不跳的时候，就绕成一个灰突突的球，轮流揣在荷包里。</p>
  <p>跳蚂蟥筋时，人要分两组。一组跳，一组绷蚂蟥筋。时光久远，如今我只记得似乎每一组都有一个带头的，剩下两三个人跟在带头的后面跳。因此带头的人厉不厉害，是很要紧的。厉害的可以一路从</p>
 </body>
</html></string>
</resources>
