<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_one_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:id="@+id/scroll_one_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:id="@+id/one_container">

    <View
        android:id="@+id/head_view_picture"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <ImageView
        android:id="@+id/one_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head_view_picture"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/loading_background"
        android:contentDescription="@string/one_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/one_info_container"
        android:layout_below="@+id/one_picture">

        <TextView
            android:id="@+id/one_vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_vol"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            style="@style/author_text"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/picture_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture_author"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        style="@style/author_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

        <LinearLayout
            android:id="@+id/one_textViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picture_author"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="21dp"
            android:paddingStart="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/one_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/date_day"
                    android:textColor="@color/colorPrimary"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_month_and_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_month_and_year"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.cpiz.android.bubbleview.BubbleTextView
                android:id="@+id/one_text"
                android:layout_marginTop="12dp"
                style="@style/one_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_text"
                app:bb_arrowTo="@id/date_day"
                app:bb_fillColor="@color/colorPrimary"
                android:minHeight="74dp"
                android:gravity="center_vertical"/>

        </LinearLayout>
    </RelativeLayout>
    <View
        android:id="@+id/bottom_view_picture"
        android:layout_below="@+id/one_info_container"
        android:layout_width="match_parent"
        android:layout_height="56dp"/>


</RelativeLayout>
    </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>